# SPACECRAFT

./: .gitattributes  .gitignore  .vim-local.vim  CMakeLists.txt  README.html  README.md  osx-fix.sh
README_fichiers/: github-8850878a3b8c9016a33ac13293f916b8fb6abbc4.css  github2-229908efb675f645b84ec7f08045d1b0c47612f6.css
bin_web/: index.html  loadEmscripten.js  style.css
cmake/: FindAntTweakBar.cmake  FindGLEW.cmake  FindSFML.cmake  Findglfw3.cmake  Findnoise.cmake
data/: blocksPackArray.xcf
extlibs/headers/glm/detail/: func_packing.inl
extlibs/libs-linux/: libGLEW.so.1.10.0  libGLEWmx.so.1.10  libsfml-system.so.2  libsfml-system.so.2.1
extlibs/libs-osx/: libAntTweakBar.dylib  libnoise.dylib
shader/CubeVertex/: CubeVertex.frag  CubeVertex.vert
shader/atmosphere/: atmosphere.frag  atmosphere.vert  atmosphere_general.frag
shader/basic/: basic.frag  basic.vert
shader/chunk/: chunk.frag  chunk.geom  chunk.vert
shader/cloud/: cloud.frag  cloud.vert
shader/cursor/: cursor.frag  cursor.vert
shader/galaxy/: galaxy.frag  galaxy.vert
shader/phong/: phong.frag  phong.vert
shader/planet/: planet.frag  planet.vert
shader/planetface/: planetface.frag  planetface.geom  planetface.vert
shader/planetface_atmosphere/: planetface_atmosphere.frag  planetface_atmosphere.geom  planetface_atmosphere.vert
shader/planetface_water/: planetface_water.frag  planetface_water.geom  planetface_water.vert
shader/planetface_water_atmosphere/: planetface_water_atmosphere.frag  planetface_water_atmosphere.geom  planetface_water_atmosphere.vert
shader/sun/: sun.frag  sun.vert  sunGlow.frag  sunGlow.vert
shader/ui/: player.frag  player.vert
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ContentHandler.h  ContentReply.cpp  ContentReply.h  ContentRequest.cpp  ContentRequest.h  CubeVertex.h  MiniMonde.h  MiniWorld.cpp  MiniWorld.h  Planet.cpp  Planet.h  PlanetInfo.cpp  PlanetInfo.h  Producer.cpp  Producer.h  Shader.cpp  Shader.h  SolarSystem.cpp  SolarSystem.h  SpaceObjectTrajectory.cpp  SpaceObjectTrajectory.h  SynchronizationQueue.h  main.cpp
src/data/: ChunkCache.cpp  ChunkCache.h  Compression.cpp  Compression.h  ContentHandler.cpp  ContentHandler.h  ContentReply.cpp  ContentReply.h  ContentRequest.cpp  ContentRequest.h  Planet.cpp  Planet.h  Producer.cpp  Producer.h  SynchronizationQueue.h
src/galaxy/: Galaxy.cpp  Galaxy.h  GalaxyGenerator.cpp  GalaxyGenerator.h
src/noise/: CaveGenerator.cpp  CaveGenerator.h  PlanetGenerator.cpp  PlanetGenerator.h  PlanetNoiseGenerator.cpp  PlanetNoiseGenerator.h  Tree.cpp  Tree.h  noiseutils.cpp  noiseutils.h
src/planetGenerator/: PlanetGenerator.cpp  PlanetGenerator.h  PlanetGeneratorEarth.cpp  PlanetGeneratorEarth.h  PlanetGeneratorMoon.cpp  PlanetGeneratorMoon.h
src/render/: Atmosphere.cpp  Atmosphere.h  Camera.cpp  Camera.h  CameraManager.cpp  Cloud.cpp  Cloud.h  Cursor.cpp  Cursor.h  Shader.cpp  Shader.h  Sun.cpp  Sun.h  TileTexture.cpp  TileTexture.h
src/render/camera/: Camera.cpp  Camera.h  CameraKeyboard.cpp  CameraKeyboard.h  CameraKeyboardMouse.cpp  CameraPlayerGround.cpp  CameraPlayerGround.h
src/render/camera/manager/: CameraKeyboard.cpp  CameraKeyboard.h  CameraKeyboardMouse.cpp  CameraKeyboardMouse.h  CameraManager.cpp  CameraManager.h
src/solarsystem/: SolarSystemGenerator.cpp  SolarSystemGenerator.h  SolarSystemGeneratorSol.cpp  SolarSystemGeneratorSol.h
src/tests/: testShaders.cpp  testShaders.h
src/ui/: PlayerUI.cpp  PlayerUI.h
src/utils/: Input.cpp  Input.h  SimplexNoise.cpp  SimplexNoise.h  Singleton.h  Sphere.cpp  Sphere.h  SphereManager.cpp  SphereManager.h  TextureManager.cpp  TextureManager.h  Tools.cpp  Tools.h  TrackerPointer.h  dbg.h  gldbg.h  glm.h  imageLoader.cpp  imageLoader.h  maths.h  mt19937.cpp  mt19937.h  positionMath.h  sphere.cpp  stb_image.cpp
src/world/: BlockType.cpp  BlockType.h  blockProcessing.cpp  blockProcessing.h
tests/: caves.cpp  producers.cpp  trees.cpp
worlddata/: 0_7_279232_262528  0_7_279264_262528  0_7_279296_262528  0_7_279328_262528  3_9_165024_265056  3_9_165056_265056  4_9_112352_65504  4_9_112384_65504
worlddata/0/: 0_7_279136_262528  0_7_279328_262496  0_7_279328_262528  0_7_279360_262496  0_7_279360_262528  3_9_164992_264960  3_9_164992_264992  3_9_165024_264960  3_9_165024_264992  3_9_384000_177792  3_9_384000_177824  3_9_384032_177792  3_9_384032_177824  4_5_576_1792  5_5_95616_20928
